Fix issues with the password prompt.